# devcontainer-templates

./: LICENSE  README.md
latex/: Dockerfile  main.tex
latex/.devcontainer/: devcontainer.json
python-data-science/: Dockerfile  pyproject.toml
python-data-science/.devcontainer/: devcontainer.json
python-opencv/: Dockerfile
python-opencv/.devcontainer/: devcontainer.json
