[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-project-template"
version = "0.1.0"
description = "Python project template with uv + ruff + devcontainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "ipykernel"
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "double"
